fix: whitespace to right on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,7 @@
 }
 
 body {
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   color: rgb(var(--foreground-rgb));
